@@ -6,5 +6,14 @@ You can practice as white or black by reversing the board!
 * java 11
 * javafx-sdk-11.0.1 
 
+# usage
+For `ChessServer.java`
+- program arguments: `{port} {1} {rounds}`
+
+
+For `ChessGUI.java`
+- vm options: `--module-path {path to javafx-sdk-11.0.1/lib} --add-modules=ALL-MODULE-PATH`
+- program arguments: `localhost {port}`
+
 # example
 ![example](https://raw.githubusercontent.com/rayz/chess-coordinates/master/example.png)
